--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "chat-gpt-interface",
   "version": "0.1.0",
+  "main": "public/electron.js",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -15,7 +16,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "electron": "electron ./electron.js",
+    "electron-start": "concurrently \"BROWSER=none npm run start\" \"wait-on http://localhost:3000 && npm run electron\"",
+    "electron-build": "electron-builder"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +38,34 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^8.0.1",
+    "electron": "^25.0.1",
+    "electron-builder": "^24.4.0",
+    "electron-is-dev": "^2.0.0",
+    "wait-on": "^7.0.1"
+  },
+  "build": {
+    "files": [
+      "build/**/*",
+      "public/electron.js",
+      "node_modules/**/*",
+      "!**/*.map",
+      "!**/*.log"],
+    "appId": "com.example.aifront",
+    "directories": {
+      "buildResources": "resources"
+    },
+    "win": {
+      "target": "nsis"
+    },
+    "mac": {
+      "target": "dmg"
+    },
+    "linux": {
+      "target": "AppImage"
+    },
+    "asar": false
   }
 }
