--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
+    "electron-is-dev": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -52,7 +53,8 @@
       "public/electron.js",
       "node_modules/**/*",
       "!**/*.map",
-      "!**/*.log"],
+      "!**/*.log"
+    ],
     "appId": "com.example.aifront",
     "directories": {
       "buildResources": "resources"
