--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "electron-is-dev": "^1.2.0",
+    "python-shell": "^5.0.0",
+    "python-struct": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
-    "electron-is-dev": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -69,5 +71,16 @@
       "target": "AppImage"
     },
     "asar": false
-  }
+  },
+  "description": "This is a frontend web user interface (WebUI) that allows you to interact with AI models through a LocalAI backend API built with ReactJS. It provides a simple and intuitive way to select and interact with different AI models that are stored in the /models directory of the LocalAI folder",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mounta11n/LocalAI-frontend.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/mounta11n/LocalAI-frontend/issues"
+  },
+  "homepage": "https://github.com/mounta11n/LocalAI-frontend#readme"
 }
